Fix #1 footer align

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,3 @@
-
 footer {
   margin-top: calc(var(--between-section-margin) * 3);
 }
@@ -11,7 +10,7 @@ footer {
   /* ... */
 }
 
-.footer-container footer section:last-child {
+footer .footer-container section:last-child {
   margin-right: 20%;
 }
 
